Fixed page horizontal scroll.

--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -20,12 +20,14 @@ h2 {
  */
 
 .about-page-container {
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 .about-top-container {
+  width: 100%;
   background-color: var(--primary-blue);
   color: var(--primary-white);
   display: flex;
@@ -64,7 +66,7 @@ h1 {
 }
 
 .data-info-container {
-  width: 100vw;
+  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -87,7 +89,7 @@ h1 {
 .about-bottom-container {
   /* background-color: var(--secondary-white); */
   background-color: lightgray;
-  width: 100vw;
+  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -97,7 +99,7 @@ h1 {
 }
 
 .inside-bottom-container {
-  width: 45vw;
+  width: 45%;
   padding-top: 5vh;
   padding-bottom: 5vh;
   padding-right: 3vw;
